# Zonotope-Decomposition

./: benchmark_hybzono.json
CGAL-6.1/examples/: paper.txt
CGAL-6.1/examples/Triangulation/: CMakeCache.txt  Makefile  barycentric_subdivision  cmake_install.cmake  convex_hull  delaunay_triangulation  regular_triangulation  triangulation  triangulation_data_structure_dynamic  triangulation_data_structure_static
CGAL-6.1/examples/Triangulation_2/: CMakeCache.txt  Makefile  adding_handles  cmake_install.cmake  colored_face  constrained  constrained_hierarchy_plus  constrained_plus  copy_triangulation_2  draw_triangulation_2  for_loop_2  hierarchy  info_insert_with_pair_iterator_2  info_insert_with_pair_iterator_regular_2  info_insert_with_transform_iterator_2  info_insert_with_zip_iterator_2  low_dimensional  polygon_triangulation  polylines_triangulation  print_cropped_voronoi  qrc_CGAL.cpp  qrc_File.cpp  qrc_Input.cpp  qrc_Triangulation_2.cpp  regular  segment_soup_to_polylines  star_conflict_zone  terr_trian  terrain  terrain_with_info  triangulation_prog1  triangulation_projection_traits  ui_ImageInterface.h  voronoi
CGAL-6.1/examples/Triangulation_2/.qt/: QtDeploySupport.cmake
CGAL-6.1/examples/Triangulation_2/CGAL_Qt6_moc_and_resources_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
CGAL-6.1/examples/Triangulation_2/CGAL_Qt6_moc_and_resources_autogen/T6HXBHLGUN/: moc_DemosMainWindow.cpp  moc_DemosMainWindow.cpp.d  moc_GraphicsItem.cpp  moc_GraphicsItem.cpp.d  moc_GraphicsViewInput.cpp  moc_GraphicsViewInput.cpp.d  moc_GraphicsViewNavigation.cpp  moc_GraphicsViewNavigation.cpp.d  moc_camera.cpp  moc_camera.cpp.d  moc_frame.cpp  moc_frame.cpp.d  moc_image_interface.cpp  moc_image_interface.cpp.d  moc_keyFrameInterpolator.cpp  moc_keyFrameInterpolator.cpp.d  moc_manipulatedCameraFrame.cpp  moc_manipulatedCameraFrame.cpp.d  moc_manipulatedFrame.cpp  moc_manipulatedFrame.cpp.d  moc_qglviewer.cpp  moc_qglviewer.cpp.d
CGAL-6.1/examples/Triangulation_3/: color
hybzono-planner/: .gitmodules  LICENSE  README.md
hybzono-planner/matlab-interface/: MPC_MIQP_mex.cpp  MPC_MIQP_mex_m.m  compile_MPC_MIQP_mex.m  cppclass.m  mex_set_methods.cpp  mex_set_methods.hpp  text_file_io.cpp  text_file_io.hpp
hybzono-planner/matlab-interface/+HybZonoMPC/@Map/: Map.m
hybzono-planner/mi-solver/include/: Data.hpp  LeavesQueue.hpp  MI_MPC.hpp  Node.hpp  VerboseOutputs.hpp
hybzono-planner/mi-solver/src/: Data.cpp  MI_MPC.cpp  Node.cpp
hybzono-planner/mpc-classes/: CMakeLists.txt
hybzono-planner/mpc-classes/examples/: ackermann_example.cpp  double_integrator_example.cpp  double_integrator_example_obs_avoid_cost_map.cpp  double_integrator_obs_avoid_example.cpp  double_integrator_obs_avoid_example_region_dep_speed_limits.cpp  double_integrator_obs_avoid_map_change.cpp
hybzono-planner/mpc-classes/include/: MPC_MIQP.hpp  MpcMathUtilities.hpp
hybzono-planner/mpc-classes/src/: MPC_MIQP.cpp
hybzono-planner/qp-custom/cpp/include/: QP_consts.hpp  QP_primal_dual.hpp  QP_primal_dual_mpc.hpp  diag_flag_1.hpp
hybzono-planner/qp-custom/cpp/src/: QP_primal_dual_mpc.cpp
hybzono-planner/sim-study/: CMakeLists.txt  run_both_sim_studies.bash  run_sim_study.bash  run_sim_study_diag_reach_thread.bash
hybzono-planner/sim-study/examples/: double_integrator_3D_obs_avoid_1_thread.cpp  double_integrator_3D_obs_avoid_8_thread.cpp  double_integrator_3D_obs_avoid_baseline.cpp  double_integrator_3D_obs_avoid_nodiag.cpp  double_integrator_3D_obs_avoid_nodiag_noreach.cpp  double_integrator_3D_obs_avoid_noreach.cpp  double_integrator_3D_obs_avoid_solver_comparison.cpp  double_integrator_obs_avoid_1_thread.cpp  double_integrator_obs_avoid_8_thread.cpp  double_integrator_obs_avoid_baseline.cpp  double_integrator_obs_avoid_nodiag.cpp  double_integrator_obs_avoid_nodiag_noreach.cpp  double_integrator_obs_avoid_noreach.cpp  double_integrator_obs_avoid_solver_comparison.cpp
hybzono-planner/sim-study/examples/data/: nonconvpoly1_vrep.txt  plot_relaxations.m  plot_trajectories.m  poly2_vrep.txt  read_map.m  read_solver_comparison.m  solver_1_thread.txt  solver_1_thread_3D.txt  solver_1_thread_traj.txt  solver_1_thread_traj_3D.txt  solver_8_thread.txt  solver_8_thread_3D.txt  solver_8_thread_traj.txt  solver_8_thread_traj_3D.txt  solver_baseline.txt  solver_baseline_3D.txt  solver_baseline_traj.txt  solver_baseline_traj_3D.txt  solver_comparison.txt  solver_comparison_3D.txt  solver_comparison_motion_plan_3D.txt  solver_comparison_state_input_3D.txt  solver_comparison_traj_3D.txt  solver_nodiag.txt  solver_nodiag_3D.txt  solver_nodiag_noreach.txt  solver_nodiag_noreach_3D.txt  solver_nodiag_noreach_traj.txt  solver_nodiag_noreach_traj_3D.txt  solver_nodiag_traj.txt  solver_nodiag_traj_3D.txt  solver_noreach.txt  solver_noreach_3D.txt  solver_noreach_traj.txt  solver_noreach_traj_3D.txt  zono3D_vrep.txt  zonocost1_vrep.txt  zonopsu_vrep.txt
hybzono-planner/sim-study/examples/maps/: nonconvpoly1.hpp  poly1.hpp  poly2.hpp  zono1.hpp  zono3D.hpp  zonocost1.hpp  zonopsu.hpp
hybzono-planner/sim-study/examples/maps/utilities/: vrep_calcs.hpp
hybzono-planner/sim-study/include/: MPC_MIQP_Gurobi.hpp  MPC_MIQP_Hrep.hpp  MPC_MIQP_Hrep_Gurobi.hpp
hybzono-planner/sim-study/src/: MPC_MIQP_Gurobi.cpp  MPC_MIQP_Hrep.cpp  MPC_MIQP_Hrep_Gurobi.cpp
ompl/py-bindings/: headers_base.txt
ompl/src/ompl/: CMakeLists.txt
ompl/src/ompl/base/goals/: GoalSpace.h
ompl/src/ompl/base/goals/src/: GoalSpace.cpp
ompl/src/ompl/base/objectives/src/: PathLengthOptimizationObjective.cpp
ompl/src/ompl/base/samplers/informed/: PathLengthDirectInfSampler.h
ompl/src/ompl/base/spaces/: SE3WAxisAngleBoundStateSpace.h  SO3WAxisAngleBoundStateSpace.h
ompl/src/ompl/base/spaces/src/: SE3WAxisAngleBoundStateSpace.cpp  SO3WAxisAngleBoundStateSpace.cpp
pdt/parameters/defaults/planners/: default_hybzono.json
pdt/src/experiments/src/: benchmark.cpp
pdt/src/factories/src/: planner_factory.cpp
pdt/src/utilities/src/: get_best_cost.cpp
test/: CMakeLists.txt
test/src/: decomposition_comparison.cpp
(+61 files in other folders)
